$Id$

2018-02-26  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- add Seagate XF1230 SSD (GH: issues/4)

2018-02-20  Christian Franke  <franke@computer.org>

	os_netbsd.cpp: Apply patch-os_netbsd.cpp 1.1 (2017-12-15) from
	pkgsrc.se/sysutils/smartmontools: Add missing <sys/stat.h>.

	configure.ac, int64.h: Remove support for pre-C99 environments without
	<inttypes.h> and <stdint.h>.

	configure.ac: Add '-Wformat=2 -fstack-protector-strong' unless
	CXXFLAGS include other '-W' or '-f' options.

2018-02-16  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Default to '-d sat' for Toshiba (0x0480), Seagate (0x0bc2),
	Western Digital (0x1058), Initio (0x13fd), ASMedia (0x174c).
	Keep known exceptions.  Merge some entries.

2018-02-08  Douglas Gilbert  <dgilbert@interlog.com>

	nvme on windows: just some code comments. Seems as though
	W10 tries to completely neuter the idea of a pass-through.

2018-01-06  Douglas Gilbert  <dgilbert@interlog.com>

	scsi subsystem: improve dStrHex() signature, adjust
	invocations. Adjust scsi_format_id_string() signature.
	Add smartctl support for Pending Defects (sub-)log page;
	seems similar to 'smartctl -l defects' but that is ATA
	only. Needs to be generalized (as it will probably appear
	in NVMe also).

2018-01-04  Douglas Gilbert  <dgilbert@interlog.com>

	scsi subsystem: preparation for decoding more log pages.

2018-01-01  Alex Samorukov <samm@os2.kiev.ua>

	os_freebsd.cpp: fix build with CLANG/6. Patch provided by
	Dimitry Andric, PR 224826

2018-01-01  Christian Franke  <franke@computer.org>

	Happy New Year! Update copyright year in version info.

2017-12-30  Douglas Gilbert  <dgilbert@interlog.com>

	scsi subsystem: add code to check for both log pages
	and subpages, subpages were not checked for previously.
	Add decoding for Format Status log page. Associated
	cleanups. Tighten checking for Seagate and Hitachi
	vendor specific log pages; '-T permissive' will relax
	checks back to the situation before this patch
